--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16",
+    "mysql2": "^2.3.3",
+    "puppeteer": "^14.3.0",
+    "sequelize": "^6.20.1",
+    "sqlite3": "^5.0.10",
     "sucrase": "^3.21.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
